--- a/tiergesund-config-server/src/main/resources/static/index.html
+++ b/tiergesund-config-server/src/main/resources/static/index.html
@@ -5,8 +5,27 @@
     <p> The Spring Cloud Config Server provides an HTTP resource-based API for external yaml configuration for all the Tiergesund Webapp</p>
     <ul>
         <li>See the <a href="https://cloud.spring.io/spring-cloud-config/">Spring Cloud Config Server reference manual</a> for the REST API</li>
+        <li><a href="https://github.com/feurle/tiergesund-webapp-config">All Tiergesund configuration files in GitHub</a></li>
         <li><a href="/application-default.yml">Common microservices configuration</a></li>
+        <li><a href="/discovery-server.yml">Discovery server configuration</a></li>
+    </ul>
+    <ul>
+        <li><a href="/vets-service-default.yml">Configuration of the vets service deployed native on host</a></li>
         <li><a href="http://localhost:8888/vets-service-docker.yml">Configuration of the vets service deployed on a Docker container</a></li>
     </ul>
+    <ul>
+        <li><a href="/visits-service-default.yml">Configuration of the visits service deployed native on host</a></li>
+        <li><a href="http://localhost:8888/visits-service-docker.yml">Configuration of the visits service deployed on a Docker container</a></li>
+    </ul>
+    <ul>
+        <li><a href="/customers-service-default.yml">Configuration of the customers service deployed native on host</a></li>
+        <li><a href="http://localhost:8888/customers-service-docker.yml">Configuration of the customers service deployed on a Docker container</a></li>
+    </ul>
+
+    <ul>
+        <li><a href="/api-gateway-default.yml">Configuration of the API gateway deployed native on host</a></li>
+        <li><a href="http://localhost:8888/api-gateway-docker.yml">Configuration of the API gateway deployed on a Docker container</a></li>
+    </ul>
+
 </body>
 </html>
